Revert "Merge pull request #22 from UCH-LDS-2026/feat/tests-jacoco"
This reverts commit 4584a352c7b5fe9c2a50c5b77b25ac1e06a14a82, reversing
changes made to 2ae6e295e1a63c23f3aa72621021e87e13154469.